--- a/main.css
+++ b/main.css
@@ -1,56 +1,111 @@
-*{
+* {
     margin: 0 auto;
     padding: 0;
     box-sizing: border-box;
 }
+
 body {
     background-color: #f2f1ef;
+    background-color: #e2ae6c;
 }
+
+header {
+    background-color: #e2ae6c;
+    padding: 2rem 1rem;
+}
+
 .main-nav {
     display: flex;
     justify-content: space-between;
-    text-decoration: none;
 }
+
+.wrapper {
+    display: flex;
+}
+
 aside {
-    float: left;
     background-color: #e2ae6c;
     padding: 1rem;
-    height: 100%;
 }
+
 .name {
     text-align: center;
 }
+
 .photo {
     width: 15rem;
     height: auto;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
 }
+
+h2,
 h3 {
     color: #6e304b;
 }
+ul {
+    list-style-type: none;
+}
 a {
     color: #a37c82;
+    text-decoration: none;
 }
+
+a:hover {
+    color:#6e304b;
+}
+
+article {
+    color: #22161c;
+}
+
 section {
     margin: 5rem 20rem;
 }
-.introduct {
-    margin-top: 3rem;
-}
-footer {
-    z-index : 99;
-    color: #b69161da;
-    opacity: 85%;
+
+.main-block {
+    -moz-border-radius-topleft: 9px;
+    -webkit-border-top-left-radius: 9px;
+    border-top-left-radius: 9px;
+    -moz-border-radius-topright: 9px;
+    -webkit-border-top-right-radius: 9px;
+    border-top-right-radius: 9px;
+    -moz-border-radius-bottomright: 9px;
+    -webkit-border-bottom-right-radius: 9px;
+    border-bottom-right-radius: 9px;
+    -moz-border-radius-bottomleft: 7px;
+    -webkit-border-bottom-left-radius: 7px;
+    border-bottom-left-radius: 7px;
+    background-color: #f2f1ef;
+    margin-right: 1rem;
 }
 
-.footer-div{
+.introduct {
+    margin-top: 2rem;
+}
+
+footer {
+    z-index: 99;
+    background-color: #e2ae6c;
+    color: #a37c82;
+    padding: 2rem 1rem;
+}
+
+.skills {
+    margin-top: 1rem;
+}
+
+.footer-div {
     max-width: 1024px;
-    display:flex;
+    display: flex;
     align-content: space-between;
 }
+
 .rs-logo {
     height: 20px;
     background-color: azure;
 }
+
 i {
     color: black;
 }
