--- a/main.css
+++ b/main.css
@@ -46,7 +46,7 @@ a {
 }
 
 a:hover {
-    color:#6e304b;
+    color: #6e304b;
 }
 
 article {
@@ -54,9 +54,9 @@ article {
 }
 
 section {
-    padding: 5rem 15rem;
-    margin-left: 2.5rem;
-    margin-right: 2.5rem;
+    padding: 4vw 10vw;
+    margin-left: 4vw;
+    margin-right: 4vw;
 }
 
 footer {
@@ -64,6 +64,15 @@ footer {
     background-color: #e2ae6c;
     color: #a37c82;
     padding: 2rem 1rem;
+}
+
+.main-wrapper {
+    width: 100vw;
+}
+
+.header__burger {
+    background-color: #e2ae6c;
+    display: none;
 }
 
 .main-nav {
@@ -116,21 +125,97 @@ footer {
 }
 
 .footer-div {
-    max-width: 1024px;
+    max-width: 100vw;
     display: flex;
     align-content: space-around;
 }
 
 .rs-logo {
-    height: 20px;
-    background-color: azure;
+    height: 2.5vw;
+    background-color: #e2ae6c;
 }
 
-.introduct, .exp, .edu, .code, .contacts {
+.introduct,
+.exp,
+.edu,
+.code,
+.contacts {
     border-bottom: 4px double #6e304b;
 }
 
 .contacts {
     padding-bottom: 2rem;
     margin-bottom: 2rem;
+}
+
+@media screen and (max-width: 767px) {
+     .header__burger {
+        position: relative;
+        z-index: 3;
+        display: block;
+      }
+     .header__burger span {
+        position: absolute;
+        width: 30px;
+        height: 2px;
+        background-color: #292929;
+        left: 40px;
+        top: 28px;
+        z-index: 3;
+        transition-duration: 0.5s;
+      }
+    
+      .header__burger:before {
+        content: "";
+        display: block;
+        background-color: #292929;
+        position: absolute;
+        width: 30px;
+        height: 2px;
+        left: 40px;
+        top: 18px;
+        z-index: 3;
+        transition-duration: 0.5s;
+      }
+    
+      .header__burger:after {
+        content: "";
+        display: block;
+        background-color: #292929;
+        position: absolute;
+        width: 30px;
+        height: 2px;
+        left: 40px;
+        top: 38px;
+        z-index: 3;
+        transition-duration: 0.5s;
+      }
+    
+      .header__burger.someActive span {
+        transform: rotate(90deg);
+      }
+    
+      .header__burger.someActive:before {
+        transform: rotate(90deg);
+        left: 30px;
+        top: 28px;
+      }
+    
+      .header__burger.someActive:after {
+        transform: rotate(90deg);
+        left: 50px;
+        top: 28px;
+      }
+      .menu {
+        position: absolute;
+        top: -450px;
+      }  
+      .menu.someActive {
+        width: 320px;
+        height: 375px;
+        display: flex;
+        flex-direction: column;
+        row-gap: 40px;
+        background-color: #e2ae6c;
+      }
 }
