--- a/main.css
+++ b/main.css
@@ -9,9 +9,29 @@ body {
     background-color: #e2ae6c;
 }
 
-header {
+.header {
     background-color: #e2ae6c;
-    padding: 2rem 1rem;
+    height: 11vw;
+    position: fixed;
+    width: 100%;
+    top: 0;
+    left: 0;
+    z-index: 50;
+}
+.header:before {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #6e304b;
+    z-index: 2;
+}
+
+main {
+    padding-top: 10vw;
+    width: 100%;
 }
 
 i {
@@ -46,7 +66,7 @@ a {
 }
 
 a:hover {
-    color: #6e304b;
+    color: #22161c;
 }
 
 article {
@@ -54,9 +74,7 @@ article {
 }
 
 section {
-    padding: 4vw 10vw;
-    margin-left: 4vw;
-    margin-right: 4vw;
+    padding: 4vw 14vw;
 }
 
 footer {
@@ -67,21 +85,33 @@ footer {
 }
 
 .main-wrapper {
-    width: 100vw;
+    width: 100%;
 }
-
+.header-wrapper {
+    width: 100%;
+    height: 100%;
+    position:relative;
+    display: flex;
+    align-items: center;
+}
+.menu {
+    width: 100%;
+}
 .header__burger {
     background-color: #e2ae6c;
     display: none;
 }
 
-.main-nav {
+.list {
     display: flex;
     justify-content: space-between;
+    position: relative;
+    z-index: 2;
 }
 
 .wrapper {
     display: flex;
+    width: 100%
 }
 
 .name {
@@ -150,72 +180,81 @@ footer {
 
 @media screen and (max-width: 767px) {
      .header__burger {
-        position: relative;
         z-index: 3;
         display: block;
+        position: relative;
+        margin: 0 0 0 75%;
+        height: 4vw;
+        width: 5vw;
+        background-color:#6e304b;
       }
      .header__burger span {
+        width: 100%;
+        height: 0.4vw;
+        background-color: #e2ae6c;
         position: absolute;
-        width: 30px;
-        height: 2px;
-        background-color: #292929;
-        left: 40px;
-        top: 28px;
+        top: 11px;
         z-index: 3;
         transition-duration: 0.5s;
       }
     
       .header__burger:before {
         content: "";
-        display: block;
-        background-color: #292929;
+        background-color: #e2ae6c;
         position: absolute;
-        width: 30px;
-        height: 2px;
-        left: 40px;
-        top: 18px;
+        bottom: 0;
+        height: 0.4vw;
+        width: 100%;
         z-index: 3;
         transition-duration: 0.5s;
       }
     
       .header__burger:after {
         content: "";
-        display: block;
-        background-color: #292929;
-        position: absolute;
-        width: 30px;
-        height: 2px;
-        left: 40px;
-        top: 38px;
-        z-index: 3;
+        background-color: #e2ae6c;
+        position:absolute;
+        left: 0;
+        height: 0.4vw;
+        width: 100%;
+        z-index: 2;
         transition-duration: 0.5s;
       }
     
       .header__burger.someActive span {
-        transform: rotate(90deg);
+        transform: scale(0);
       }
     
       .header__burger.someActive:before {
-        transform: rotate(90deg);
-        left: 30px;
-        top: 28px;
+        transform: rotate(45deg);
+        top: 11px;
       }
     
       .header__burger.someActive:after {
-        transform: rotate(90deg);
-        left: 50px;
-        top: 28px;
+        transform: rotate(-45deg);
+        bottom: 11px;
       }
       .menu {
-        position: absolute;
-        top: -450px;
+        position: fixed;
+        top:-110%;
+        left: 0;
+        width:100%;
+        height: 100%;
+        background-color:#e2ae6c;
+        padding: 11vw 2.5vw 1.3vw 2.5vw;
+        transition-duration: 0.5ms;
       }  
       .menu.someActive {
-        width: 320px;
-        height: 375px;
-        display: flex;
-        flex-direction: column;
-        row-gap: 40px;
-        background-color: #e2ae6c;
+        top: 2vw;
+        width: 25vw;
+        height: 75vw;
+        right: 0;
+        left: 75vw;
+      }
+      .list {
+        display: block;
+      }
+
+      .list li {
+          margin: 0 0 5vw 0;
       }
 }
