--- a/main.css
+++ b/main.css
@@ -41,7 +41,7 @@ i {
 
 .right-block {
     background-color: #e2ae6c;
-    padding: 1rem;
+    padding: 2vw;
 }
 
 h2,
@@ -75,14 +75,14 @@ article {
 }
 
 section {
-    padding: 4vw 14vw;
+    padding: 4vw 14vw 4vw 14vw;
 }
 
 footer {
     z-index: 99;
     background-color: #e2ae6c;
     color: #a37c82;
-    padding: 2rem 1rem;
+    padding: 5vw 2vw;
 }
 
 .main-wrapper {
@@ -151,15 +151,16 @@ footer {
     -webkit-border-bottom-left-radius: 7px;
     border-bottom-left-radius: 7px;
     background-color: #f2f1ef;
-    margin-right: 1rem;
+    max-width: 68vw;
+    /* padding-right: 2vw; */
 }
 
 .introduct {
-    margin-top: 1rem;
+    margin-top: 2vw;
 }
 
 .skills {
-    margin-top: 1rem;
+    margin-top: 2vw;
 }
 
 .footer-div {
@@ -174,8 +175,8 @@ footer {
 }
 
 .introduct,
-.exp,
-.edu2,
+.exp2,
+.edu,
 .code,
 .contacts {
     border-bottom: 4px double #6e304b;
@@ -189,8 +190,8 @@ footer {
 }
 
 .contacts {
-    padding-bottom: 2rem;
-    margin-bottom: 2rem;
+    padding-bottom: 5vw;
+    margin-bottom: 5vw;
 }
 
 @media screen and (max-width: 767px) {
@@ -242,12 +243,12 @@ footer {
 
     .header__burger.someActive:before {
         transform: rotate(45deg);
-        top: 11px;
+        top: 50%;
     }
 
     .header__burger.someActive:after {
         transform: rotate(-45deg);
-        bottom: 11px;
+        bottom: 50%;
     }
 
     .menu {
@@ -263,10 +264,11 @@ footer {
 
     .menu.someActive {
         top: 2vw;
-        width: 25vw;
-        height: 75vw;
+        max-width: 30vw;
+        max-height: 80vw;
         right: 0;
-        left: 75vw;
+        left: 70%;
+        font-size: small;
     }
 
     .list {
@@ -275,5 +277,9 @@ footer {
 
     .list li {
         margin: 0 0 5vw 0;
+    }
+
+    article, p {
+        font-size: calc( (100vw - 60rem)/(80 - 30) * (1.5 - 1) + 1rem);
     }
 }
